// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders 1`] = `
Object {
  "Component": Object {
    "Tab": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Icon": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 0,
          "hasFinalFocus": false,
          "hasFocus": false,
          "isComponent": true,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Icon",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": "",
          "tag": [Function],
          "tags": Array [
            "Icon",
          ],
          "type": "Icon",
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
        "Text": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Text",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Text",
          ],
          "texture": Object {
            "fontFace": "XfinityBrownBold",
            "fontSize": 32,
            "letterSpacing": -0.2,
            "lineHeight": 40,
            "type": "TextTexture",
            "verticalAlign": "middle",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": true,
      "flexItem": true,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Tab",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Tab",
      ],
      "type": "_class",
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`Tab renders with a title 1`] = `
Object {
  "Component": Object {
    "Tab": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Icon": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 0,
          "hasFinalFocus": false,
          "hasFocus": false,
          "isComponent": true,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Icon",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": "",
          "tag": [Function],
          "tags": Array [
            "Icon",
          ],
          "type": "Icon",
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
        "Text": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Text",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Text",
          ],
          "texture": Object {
            "fontFace": "XfinityBrownBold",
            "fontSize": 32,
            "letterSpacing": -0.2,
            "lineHeight": 40,
            "text": "Tab",
            "type": "TextTexture",
            "verticalAlign": "middle",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": true,
      "flexItem": true,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Tab",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Tab",
      ],
      "type": "_class",
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`Tab renders with a title and icon 1`] = `
Object {
  "Component": Object {
    "Tab": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Icon": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 40,
          "hasFinalFocus": false,
          "hasFocus": false,
          "isComponent": true,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Icon",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": "",
          "tag": [Function],
          "tags": Array [
            "Icon",
          ],
          "texture": Object {
            "src": "data:image/jpg;base64, iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAABTUlEQVRYR8WX0VEDMQxEdyuADggVhFQAVEALdJBQASmBVEALdABUAB0AHZAKllGGMDc3Z/tGRrZ+7uNi+2mtlS5E52DN+ZJOSX7X7OEGkHQL4JGkew8Ddy22zAF8ADAFXHscVXMtlrQFcH/IoDWApMVv9ockegA8Abj5k7ClApKuADwPq76pApLeASy7ABxtN/Z8EwWGtusF8ABgPdXxwhUY2665ApJeAFxm+r29T8UngB1JK97JyHbCKds5Bo8Nq/PU0CoBWAZnjkPHS1YpFZIAki4AvP3D4V8krX27rsDkO6mEuCaZrJPSFZgKNvftmYpcgb6StPadDNc4Hu4mSZn9rfisjroAmP02peuLUmAPYDHnezEK4I6kte9iRABkbTcmigDI2i4aoGi7aICi7SIBZtkuCmC27SIAbF5s59ouAqDqD2q1DYudpvCDH6f0jiFcMsG+AAAAAElFTkSuQmCC",
            "type": "ImageTexture",
          },
          "type": "Icon",
          "visible": true,
          "w": 40,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
        "Text": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Text",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Text",
          ],
          "texture": Object {
            "fontFace": "XfinityBrownBold",
            "fontSize": 32,
            "letterSpacing": -0.2,
            "lineHeight": 40,
            "text": "Tab",
            "type": "TextTexture",
            "verticalAlign": "middle",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": true,
      "flexItem": true,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Tab",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Tab",
      ],
      "type": "_class",
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`Tab renders with an icon 1`] = `
Object {
  "Component": Object {
    "Tab": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Icon": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 40,
          "hasFinalFocus": false,
          "hasFocus": false,
          "isComponent": true,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Icon",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": "",
          "tag": [Function],
          "tags": Array [
            "Icon",
          ],
          "texture": Object {
            "src": "data:image/jpg;base64, iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAABTUlEQVRYR8WX0VEDMQxEdyuADggVhFQAVEALdJBQASmBVEALdABUAB0AHZAKllGGMDc3Z/tGRrZ+7uNi+2mtlS5E52DN+ZJOSX7X7OEGkHQL4JGkew8Ddy22zAF8ADAFXHscVXMtlrQFcH/IoDWApMVv9ockegA8Abj5k7ClApKuADwPq76pApLeASy7ABxtN/Z8EwWGtusF8ABgPdXxwhUY2665ApJeAFxm+r29T8UngB1JK97JyHbCKds5Bo8Nq/PU0CoBWAZnjkPHS1YpFZIAki4AvP3D4V8krX27rsDkO6mEuCaZrJPSFZgKNvftmYpcgb6StPadDNc4Hu4mSZn9rfisjroAmP02peuLUmAPYDHnezEK4I6kte9iRABkbTcmigDI2i4aoGi7aICi7SIBZtkuCmC27SIAbF5s59ouAqDqD2q1DYudpvCDH6f0jiFcMsG+AAAAAElFTkSuQmCC",
            "type": "ImageTexture",
          },
          "type": "Icon",
          "visible": true,
          "w": 40,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
        "Text": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Text",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Text",
          ],
          "texture": Object {
            "fontFace": "XfinityBrownBold",
            "fontSize": 32,
            "letterSpacing": -0.2,
            "lineHeight": 40,
            "type": "TextTexture",
            "verticalAlign": "middle",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": true,
      "flexItem": true,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Tab",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Tab",
      ],
      "type": "_class",
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`Tab sets iconSize 1`] = `
Object {
  "Component": Object {
    "Tab": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Icon": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 32,
          "hasFinalFocus": false,
          "hasFocus": false,
          "isComponent": true,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Icon",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": "",
          "tag": [Function],
          "tags": Array [
            "Icon",
          ],
          "texture": Object {
            "src": "data:image/jpg;base64, iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAABTUlEQVRYR8WX0VEDMQxEdyuADggVhFQAVEALdJBQASmBVEALdABUAB0AHZAKllGGMDc3Z/tGRrZ+7uNi+2mtlS5E52DN+ZJOSX7X7OEGkHQL4JGkew8Ddy22zAF8ADAFXHscVXMtlrQFcH/IoDWApMVv9ockegA8Abj5k7ClApKuADwPq76pApLeASy7ABxtN/Z8EwWGtusF8ABgPdXxwhUY2665ApJeAFxm+r29T8UngB1JK97JyHbCKds5Bo8Nq/PU0CoBWAZnjkPHS1YpFZIAki4AvP3D4V8krX27rsDkO6mEuCaZrJPSFZgKNvftmYpcgb6StPadDNc4Hu4mSZn9rfisjroAmP02peuLUmAPYDHnezEK4I6kte9iRABkbTcmigDI2i4aoGi7aICi7SIBZtkuCmC27SIAbF5s59ouAqDqD2q1DYudpvCDH6f0jiFcMsG+AAAAAElFTkSuQmCC",
            "type": "ImageTexture",
          },
          "type": "Icon",
          "visible": true,
          "w": 32,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
        "Text": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Text",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Text",
          ],
          "texture": Object {
            "fontFace": "XfinityBrownBold",
            "fontSize": 32,
            "letterSpacing": -0.2,
            "lineHeight": 40,
            "type": "TextTexture",
            "verticalAlign": "middle",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": true,
      "flexItem": true,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Tab",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Tab",
      ],
      "type": "_class",
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`Tab sets iconWidth and iconHeight 1`] = `
Object {
  "Component": Object {
    "Tab": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Icon": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 20,
          "hasFinalFocus": false,
          "hasFocus": false,
          "isComponent": true,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Icon",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": "",
          "tag": [Function],
          "tags": Array [
            "Icon",
          ],
          "texture": Object {
            "src": "data:image/jpg;base64, iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAABTUlEQVRYR8WX0VEDMQxEdyuADggVhFQAVEALdJBQASmBVEALdABUAB0AHZAKllGGMDc3Z/tGRrZ+7uNi+2mtlS5E52DN+ZJOSX7X7OEGkHQL4JGkew8Ddy22zAF8ADAFXHscVXMtlrQFcH/IoDWApMVv9ockegA8Abj5k7ClApKuADwPq76pApLeASy7ABxtN/Z8EwWGtusF8ABgPdXxwhUY2665ApJeAFxm+r29T8UngB1JK97JyHbCKds5Bo8Nq/PU0CoBWAZnjkPHS1YpFZIAki4AvP3D4V8krX27rsDkO6mEuCaZrJPSFZgKNvftmYpcgb6StPadDNc4Hu4mSZn9rfisjroAmP02peuLUmAPYDHnezEK4I6kte9iRABkbTcmigDI2i4aoGi7aICi7SIBZtkuCmC27SIAbF5s59ouAqDqD2q1DYudpvCDH6f0jiFcMsG+AAAAAElFTkSuQmCC",
            "type": "ImageTexture",
          },
          "type": "Icon",
          "visible": true,
          "w": 22,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
        "Text": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "99ffffff",
          "enabled": true,
          "flex": false,
          "flexItem": true,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Text",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Text",
          ],
          "texture": Object {
            "fontFace": "XfinityBrownBold",
            "fontSize": 32,
            "letterSpacing": -0.2,
            "lineHeight": 40,
            "type": "TextTexture",
            "verticalAlign": "middle",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": true,
      "flexItem": true,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Tab",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Tab",
      ],
      "type": "_class",
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`TabBar renders 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Items": Object {
          "active": false,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Items",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Items",
          ],
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "hasFinalFocus": true,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "Row",
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "type": "Row",
      "visible": true,
      "w": 1920,
      "x": 0,
      "y": 0,
      "zIndex": 1,
    },
    "FocusBar": Object {
      "active": false,
      "alpha": 0.96,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "FocusBar",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "FocusBar",
      ],
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 2,
    },
  },
}
`;

exports[`TabBar renders a focus bar with barLength and barSpacing 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Items": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Element-142": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Tab": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Icon": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "f2ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Icon",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "tags": Array [
                        "Icon",
                      ],
                      "type": "Icon",
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Text": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "f2ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Text",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Text",
                      ],
                      "texture": Object {
                        "fontFace": "XfinityBrownBold",
                        "fontSize": 32,
                        "letterSpacing": -0.2,
                        "lineHeight": 40,
                        "text": "Foo",
                        "type": "TextTexture",
                        "verticalAlign": "middle",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": true,
                  "flexItem": true,
                  "h": 0,
                  "hasFinalFocus": true,
                  "hasFocus": true,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Tab",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Tab",
                  ],
                  "type": "_class",
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": true,
              "flexItem": true,
              "h": 0,
              "hasFinalFocus": false,
              "hasFocus": true,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": null,
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "type": "Tab",
              "visible": true,
              "w": 0,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
            "Element-146": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Tab": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Icon": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "99ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Icon",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "tags": Array [
                        "Icon",
                      ],
                      "type": "Icon",
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Text": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "99ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Text",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Text",
                      ],
                      "texture": Object {
                        "fontFace": "XfinityBrownBold",
                        "fontSize": 32,
                        "letterSpacing": -0.2,
                        "lineHeight": 40,
                        "text": "Bar",
                        "type": "TextTexture",
                        "verticalAlign": "middle",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": true,
                  "flexItem": true,
                  "h": 0,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Tab",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Tab",
                  ],
                  "type": "_class",
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": true,
              "flexItem": true,
              "h": 0,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": null,
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "type": "Tab",
              "visible": true,
              "w": 0,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Items",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Items",
          ],
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "Row",
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "type": "Row",
      "visible": true,
      "w": 1920,
      "x": 0,
      "y": 0,
      "zIndex": 1,
    },
    "FocusBar": Object {
      "active": true,
      "alpha": 0.96,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "FocusBar",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "FocusBar",
      ],
      "texture": Object {
        "h": 4,
        "type": "Line",
        "w": 100,
      },
      "visible": true,
      "w": 100,
      "x": 0,
      "y": 10,
      "zIndex": 2,
    },
  },
}
`;

exports[`TabBar renders tabs 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Items": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Element-106": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Tab": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Icon": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "f2ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Icon",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "tags": Array [
                        "Icon",
                      ],
                      "type": "Icon",
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Text": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "f2ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Text",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Text",
                      ],
                      "texture": Object {
                        "fontFace": "XfinityBrownBold",
                        "fontSize": 32,
                        "letterSpacing": -0.2,
                        "lineHeight": 40,
                        "text": "Foo",
                        "type": "TextTexture",
                        "verticalAlign": "middle",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": true,
                  "flexItem": true,
                  "h": 0,
                  "hasFinalFocus": true,
                  "hasFocus": true,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Tab",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Tab",
                  ],
                  "type": "_class",
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": true,
              "flexItem": true,
              "h": 0,
              "hasFinalFocus": false,
              "hasFocus": true,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": null,
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "type": "Tab",
              "visible": true,
              "w": 0,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
            "Element-110": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Tab": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Icon": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "99ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Icon",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "tags": Array [
                        "Icon",
                      ],
                      "type": "Icon",
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Text": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "99ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Text",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Text",
                      ],
                      "texture": Object {
                        "fontFace": "XfinityBrownBold",
                        "fontSize": 32,
                        "letterSpacing": -0.2,
                        "lineHeight": 40,
                        "text": "Bar",
                        "type": "TextTexture",
                        "verticalAlign": "middle",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": true,
                  "flexItem": true,
                  "h": 0,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Tab",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Tab",
                  ],
                  "type": "_class",
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": true,
              "flexItem": true,
              "h": 0,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": null,
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "type": "Tab",
              "visible": true,
              "w": 0,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Items",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Items",
          ],
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "Row",
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "type": "Row",
      "visible": true,
      "w": 1920,
      "x": 0,
      "y": 0,
      "zIndex": 1,
    },
    "FocusBar": Object {
      "active": true,
      "alpha": 0.96,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "FocusBar",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "FocusBar",
      ],
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 2,
    },
  },
}
`;

exports[`TabBar renders tabs with tabHeight and tabWidth 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Items": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Element-124": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Tab": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Icon": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "f2ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Icon",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "tags": Array [
                        "Icon",
                      ],
                      "type": "Icon",
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Text": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "f2ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Text",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Text",
                      ],
                      "texture": Object {
                        "fontFace": "XfinityBrownBold",
                        "fontSize": 32,
                        "letterSpacing": -0.2,
                        "lineHeight": 40,
                        "text": "Foo",
                        "type": "TextTexture",
                        "verticalAlign": "middle",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": true,
                  "flexItem": true,
                  "h": 0,
                  "hasFinalFocus": true,
                  "hasFocus": true,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Tab",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Tab",
                  ],
                  "type": "_class",
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": true,
              "flexItem": true,
              "h": 100,
              "hasFinalFocus": false,
              "hasFocus": true,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": null,
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "type": "Tab",
              "visible": true,
              "w": 100,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
            "Element-128": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Tab": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Icon": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "99ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Icon",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "tags": Array [
                        "Icon",
                      ],
                      "type": "Icon",
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Text": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "99ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Text",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Text",
                      ],
                      "texture": Object {
                        "fontFace": "XfinityBrownBold",
                        "fontSize": 32,
                        "letterSpacing": -0.2,
                        "lineHeight": 40,
                        "text": "Bar",
                        "type": "TextTexture",
                        "verticalAlign": "middle",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": true,
                  "flexItem": true,
                  "h": 0,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Tab",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Tab",
                  ],
                  "type": "_class",
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": true,
              "flexItem": true,
              "h": 50,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": null,
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "type": "Tab",
              "visible": true,
              "w": 50,
              "x": 100,
              "y": 0,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 100,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Items",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Items",
          ],
          "visible": true,
          "w": 150,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "Row",
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "type": "Row",
      "visible": true,
      "w": 1920,
      "x": 0,
      "y": 0,
      "zIndex": 1,
    },
    "FocusBar": Object {
      "active": true,
      "alpha": 0.96,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "FocusBar",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "FocusBar",
      ],
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 2,
    },
  },
}
`;

exports[`TabBar supports Row props itemSpacing and wrapSelected 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Items": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Element-196": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Tab": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Icon": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "f2ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Icon",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "tags": Array [
                        "Icon",
                      ],
                      "type": "Icon",
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Text": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "f2ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Text",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Text",
                      ],
                      "texture": Object {
                        "fontFace": "XfinityBrownBold",
                        "fontSize": 32,
                        "letterSpacing": -0.2,
                        "lineHeight": 40,
                        "text": "One",
                        "type": "TextTexture",
                        "verticalAlign": "middle",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": true,
                  "flexItem": true,
                  "h": 0,
                  "hasFinalFocus": true,
                  "hasFocus": true,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Tab",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Tab",
                  ],
                  "type": "_class",
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": true,
              "flexItem": true,
              "h": 0,
              "hasFinalFocus": false,
              "hasFocus": true,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": null,
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "type": "Tab",
              "visible": true,
              "w": 0,
              "x": 0,
              "y": 0,
              "zIndex": 0,
            },
            "Element-200": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Tab": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "children": Object {
                    "Icon": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "99ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "hasFinalFocus": false,
                      "hasFocus": false,
                      "isComponent": true,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Icon",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": "",
                      "tag": [Function],
                      "tags": Array [
                        "Icon",
                      ],
                      "type": "Icon",
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                    "Text": Object {
                      "active": true,
                      "alpha": 1,
                      "attached": true,
                      "boundsMargin": null,
                      "clipping": false,
                      "color": "99ffffff",
                      "enabled": true,
                      "flex": false,
                      "flexItem": true,
                      "h": 0,
                      "isComponent": undefined,
                      "mount": 0,
                      "mountX": 0,
                      "mountY": 0,
                      "pivot": 0.5,
                      "pivotX": 0.5,
                      "pivotY": 0.5,
                      "ref": "Text",
                      "renderOfScreen": undefined,
                      "renderToTexture": false,
                      "scale": 1,
                      "scaleX": 1,
                      "scaleY": 1,
                      "state": undefined,
                      "tag": [Function],
                      "tags": Array [
                        "Text",
                      ],
                      "texture": Object {
                        "fontFace": "XfinityBrownBold",
                        "fontSize": 32,
                        "letterSpacing": -0.2,
                        "lineHeight": 40,
                        "text": "Two",
                        "type": "TextTexture",
                        "verticalAlign": "middle",
                      },
                      "visible": true,
                      "w": 0,
                      "x": 0,
                      "y": 0,
                      "zIndex": 0,
                    },
                  },
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": true,
                  "flexItem": true,
                  "h": 0,
                  "hasFinalFocus": false,
                  "hasFocus": false,
                  "isComponent": true,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Tab",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": "",
                  "tag": [Function],
                  "tags": Array [
                    "Tab",
                  ],
                  "type": "_class",
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": true,
              "flexItem": true,
              "h": 0,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": null,
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "type": "Tab",
              "visible": true,
              "w": 0,
              "x": 20,
              "y": 0,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Items",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Items",
          ],
          "visible": true,
          "w": 20,
          "x": 0,
          "y": 0,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "hasFinalFocus": false,
      "hasFocus": true,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "Row",
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "type": "Row",
      "visible": true,
      "w": 1920,
      "x": 0,
      "y": 0,
      "zIndex": 1,
    },
    "FocusBar": Object {
      "active": true,
      "alpha": 0.96,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "FocusBar",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "FocusBar",
      ],
      "visible": true,
      "w": 0,
      "x": 0,
      "y": 0,
      "zIndex": 2,
    },
  },
}
`;
